# spectre

./: CITATION.cff  Metadata.yaml  README.md  citation.bib
.github/workflows/: DeployStaticExecutables.yaml  Tests.yaml
cmake/: AddCxxFlag.cmake  AddInputFileTests.cmake  SetupCxxFlags.cmake  SetupYamlCpp.cmake
containers/: Dockerfile.buildenv
docs/: References.bib
docs/DevGuide/: Parallelization.md
docs/Installation/: Installation.md
docs/Tutorials/: CCE.md
src/Domain/CoordinateMaps/: CMakeLists.txt  SphericalToCartesianPfaffian.cpp  SphericalToCartesianPfaffian.hpp
src/Domain/Creators/TimeDependentOptions/: ShapeMap.cpp  ShapeMap.hpp
src/Domain/Structure/: SegmentId.cpp
src/Elliptic/Systems/Xcts/: FirstOrderSystem.hpp
src/Evolution/DgSubcell/: CellCenteredFlux.hpp
src/Evolution/Executables/Cce/: CharacteristicExtract.cpp  KleinGordonCharacteristicExtract.cpp
src/Executables/: CMakeLists.txt
src/Executables/PreprocessCceWorldtube/: CMakeLists.txt  PreprocessCceWorldtube.cpp
src/Executables/ReduceCceWorldtube/: ReduceCceWorldtube.cpp
src/NumericalAlgorithms/LinearOperators/: CMakeLists.txt  DefiniteIntegral.cpp  PartialDerivatives.cpp  PartialDerivatives.tpp
src/NumericalAlgorithms/RootFinding/: TOMS748.hpp
src/NumericalAlgorithms/Spectral/: CMakeLists.txt  LogicalCoordinates.cpp  LogicalCoordinates.hpp  Mesh.cpp  Spectral.cpp
src/NumericalAlgorithms/SphericalHarmonics/: CMakeLists.txt  SpherepackCache.cpp  SpherepackCache.hpp
src/Options/: ParseOptions.hpp
src/Parallel/PhaseControl/: ContributeToPhaseChangeReduction.hpp
src/ParallelAlgorithms/Actions/: FunctionsOfTimeAreReady.hpp
src/ParallelAlgorithms/ApparentHorizonFinder/: HorizonAliases.hpp
src/ParallelAlgorithms/Events/: ObserveConstantsPerElement.hpp
src/PointwiseFunctions/GeneralRelativity/: CMakeLists.txt  TortoiseCoordinates.cpp  TortoiseCoordinates.hpp
src/PointwiseFunctions/Xcts/: AdmLinearMomentum.cpp  AdmMass.cpp  AdmMass.hpp  AdmMomentum.cpp  AdmMomentum.hpp  CMakeLists.txt  CenterOfMass.cpp  CenterOfMass.hpp
src/Utilities/: ConstantExpressions.hpp
support/Machines/: CaltechHpc.yaml  Mbot.yaml
support/Pipelines/Bbh/: Inspiral.yaml
support/Python/: Machines.py  Schedule.py
tests/InputFiles/Cce/: CharacteristicExtract.yaml  KleinGordonCharacteristicExtract.yaml
tests/InputFiles/PreprocessCceWorldtube/: PreprocessCceWorldtube.yaml
tests/InputFiles/ReduceCceWorldtube/: ReduceCceWorldtube.yaml
tests/Unit/Executables/: CMakeLists.txt  Test_PreprocessCceWorldtube.cpp  Test_ReduceCceWorldtube.cpp
tests/Unit/Parallel/: CMakeLists.txt  Test_AlgorithmPhaseControl.hpp  Test_AlgorithmPhaseControlNodegroup.cpp  Test_AlgorithmPhaseControlNodegroup.yaml  Test_AlgorithmPhaseControlSingleton.cpp  Test_AlgorithmPhaseControlSingleton.yaml
tools/Hooks/: pre-commit.sh
(+93 files in other folders)
